reports/latest_report.txt

===== github_monitor.py =====

  File "/home/runner/work/protocol-signal-lab/protocol-signal-lab/scripts/github_monitor.py", line 12
    print("Timestamp:", datetime.utcnow().strftime("%Y-%m-%d %H:%M:%S UTC")
         ^
SyntaxError: '(' was never closed

Protocol Signal Lab
GitHub Infrastructure Monitor
Timestamp: 2026-03-06 19:04:00 UTC
==================================================

--------------------------------------------------
Repository: celestiaorg/celestia-node
Stars: 993
Forks: 1066
Open Issues: 371

--------------------------------------------------
Repository: base-org/node
Stars: 68708
Forks: 3215
Open Issues: 15

--------------------------------------------------
Repository: Layr-Labs/eigenlayer-contracts
Stars: 713
Forks: 472
Open Issues: 76

